# primerpro

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/primerpro/: __init__.py  model.py  search.py
tests/: fixtures.py  test_buildable_search.py  test_buildable_text_data_search.py  test_decodability.py  test_english_regression.py  test_english_search_regression.py  test_minimal_pair_and_tone_search.py  test_model_branch_coverage.py  test_parser_edge_cases.py  test_residue_search.py  test_search_branch_coverage.py  test_spanish_like_regression.py  test_spanish_like_search_regression.py  test_text_data.py  test_tone_regression.py  test_word_behavior_regression.py  test_word_decomposition.py
